--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 </p>
                 <p class="performers__subtitle">
                   SxulTape<br>
-                  visio
+                  vision
                 </p>
               </div>
               <div class="performers__text_right">
